--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
