--- a/Inventario/packages.config
+++ b/Inventario/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="Xam.Plugin.Connectivity" version="3.0.3" targetFramework="portable45-net45+win8+wpa81" />
   <package id="Xamarin.Forms" version="2.4.0.282" targetFramework="portable45-net45+win8+wpa81" />
   <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="portable45-net45+win8+wpa81" />
   <package id="ZXing.Net.Mobile.Forms" version="2.2.9" targetFramework="portable45-net45+win8+wpa81" />
